[package]
name = "arch-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
grammers-session = { git = "https://github.com/Lonami/grammers" }
grammers-client = { git = "https://github.com/Lonami/grammers", features = [
    "html",
    "markdown",
] }
grammers-tl-types = { git = "https://github.com/Lonami/grammers" }
dotenv = "0.15.0"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["full"] }
lazy_static = "1.4.0"
ureq = { version = "2.9.6", features = ["json"] }
openai-api-rs = "4.0.8"
simplelog = "0.12.2"
futures-util = "0.3.30"
